infra/cluster/kustomize/user-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
  namespace: user-api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: user-api
  template:
    metadata:
      labels:
        component: user-api
    spec:
      containers:
      - name: user-api
        image: localhost:5005/bazel-test/users/api:main-1648054554-484bd33
        imagePullPolicy: Always
        ports:
        - containerPort: 8096
          name: user-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
