infra/cluster/kustomize/user-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-api
  namespace: user-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.cluster.local
    http:
      paths:
      - pathType: Prefix
        path: /users
        backend:
          service:
            name: user-api
            port:
              number: 8096
